# pose-correct

./: README.md  corrected_by_helper_sensor_3_5.csv  corrected_pose_sensor_3_5.csv  corrected_sensor_3_5_field_pose.csv  corrected_sensor_5_3_swapped_field_pose.csv  data.csv  data_sensor_3_5_field_pose.csv  observations_sensor_3_5.csv  observations_sensor_5_3_swapped.csv  pose_correct_model_sensor_3_5.json  pose_correct_model_sensor_5_3_swapped.json  pyproject.toml
config/: pick_geometry.yaml
examples/: sample_data.csv
scripts/: collect_sensor_odin_data.py  correct_pose_sensor_3_5.py  interactive_correct_and_prepare.py
src/pose_correct/: __init__.py  cli.py  corrector.py  io.py  math_utils.py  models.py  pick_bridge.py
tests/: test_corrector.py  test_pick_bridge.py
