[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pose-correct"
version = "0.1.0"
description = "Laser range based pose correction for a square chassis in a corner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyserial>=3.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pose-correct = "pose_correct.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
